--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-joi-validation": "^5.0.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
